Person list render and person detail with mock.

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,7 +5,8 @@
     </div>
 
     <section>
-        <app-person-list></app-person-list>
+        <!-- <app-person-list [personList]="personList" (personSelection)="personSelection($event)"></app-person-list> -->
+        <router-outlet></router-outlet>
     </section>
 
     <div>
