--- a/src/app/shared/search/search.component.html
+++ b/src/app/shared/search/search.component.html
@@ -1,1 +1,1 @@
-<input type="text" [(ngModel)]="searchText" (ngModelChange)="detectorChange()" placeholder="Ingrese un nombre">
+<input type="text" [(ngModel)]="searchText" (ngModelChange)="detectorChange()" placeholder="{{placeholder}}">
