--- a/src/app/main/person-detail/person-detail.component.html
+++ b/src/app/main/person-detail/person-detail.component.html
@@ -1,3 +1,7 @@
 <div>
-    <span>Id de la persona{{personDetail.id}}</span>
+    <span>{{personDetail.id}}</span>
+    <span>{{personDetail.first_name}}</span>
+    <span>{{personDetail.last_name}}</span>
+    <span>{{personDetail.gender}}</span>
+    <span>{{personDetail.party}}</span>
 </div>
